Fix font distortion of phpBB branch in download button in Safari.

--- a/styles/prosilver/theme/common.css
+++ b/styles/prosilver/theme/common.css
@@ -137,8 +137,8 @@ a.download-button span {
 }
 
 a.download-button .vendor-version {
+	color: #D7EFC5;
 	font-weight: normal;
-	opacity: 0.8;
 }
 
 .download-info {
